# srcDispatch

./: .gitmodules  CMakeLists.txt
CMake/: CMakeLists.txt  srcdispatch_build.cmake  srcsax_event_dispatch_build.cmake  srcsax_event_dispatch_install.cmake
policy_classes/: ClassPolicy.hpp  DeclTypePolicy.hpp  FunctionCallPolicy.hpp  FunctionSignaturePolicy.hpp  NamePolicy.hpp  ParamTypePolicy.hpp  TypePolicy.hpp
src/: CMakeLists.txt  srcSAXEventDispatch.cpp  srcSAXEventDispatch.hpp  srcSAXEventDispatchUtilities.hpp
src/dispatcher/: srcDispatch.cpp  srcDispatch.hpp  srcDispatchSingleEvent.hpp  srcDispatchUtilities.hpp  srcDispatcher.cpp  srcDispatcher.hpp  srcDispatcherSingleEvent.hpp  srcSAXEventDispatch.cpp  srcSAXEventDispatch.hpp  srcSAXEventDispatchUtilities.hpp  srcSAXEventDispatcher.cpp  srcSAXEventDispatcher.hpp  srcSAXSingleEventDispatcher.hpp
src/policy_classes/: BlockPolicySingleEvent.hpp  BlockSingleEvent.hpp  CallPolicySingleEvent.cpp  CallPolicySingleEvent.hpp  ClassPolicy.hpp  ClassPolicySingleEvent.hpp  CollectNLContext.hpp  ConditionPolicySingleEvent.hpp  ConditionalPolicy.hpp  ConditionalPolicySingleEvent.cpp  ConditionalPolicySingleEvent.hpp  DeclDS.hpp  DeclTypePolicy.hpp  DeclTypePolicyRecursive.hpp  DeclTypePolicySingleEvent.hpp  ExprPolicy.hpp  ExprStmtPolicy.hpp  ExprStmtPolicySingleEvent.hpp  ExpressionPolicySingleEvent.cpp  ExpressionPolicySingleEvent.hpp  FunctionCallPolicy.hpp  FunctionPolicySingleEvent.hpp  FunctionSignaturePolicy.hpp  FunctionSignaturePolicySingleEvent.hpp  NamePolicy.hpp  NamePolicySingleEvent.cpp  NamePolicySingleEvent.hpp  ParamTypePolicy.hpp  ParamTypePolicySingleEvent.hpp  ParamTypeSingleEvent.hpp  ReturnPolicy.hpp  ReturnPolicySingleEvent.hpp  SNLPolicy.hpp  SingleEventPolicyDispatcher.hpp  StereotypePolicy.hpp  TemplateArgumentPolicy.cpp  TemplateArgumentPolicy.hpp  TemplateArgumentPolicySingleEvent.cpp  TemplateArgumentPolicySingleEvent.hpp  TypePolicy.cpp  (+7 more)
tests/: CMakeLists.txt  TestCallPolicy.cpp  TestClassPolicy.cpp  TestDecleTypePolicy.cpp  TestExpr.cpp  TestFnSignaturePolicy.cpp  TestParamTypePolicy.cpp  TestSNLPolicy.cpp  TestSrcSlicePolicy.cpp
